<resources>
    <string name="app_name">TaskApp53</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">New Task</string>
    <string name="profile_fragment">Profile</string>
    <string name="desc_second">Here you can write down something important or make a schedule for tomorrow:)</string>
    <string name="to_do_list">To_do list!</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
</resources>