<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskapp53.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taskapp53.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskapp53.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/newTaskFragment"
        android:name="com.example.taskapp53.ui.home.new_task.NewTaskFragment"
        android:label="@string/new_task"
        tools:layout="@layout/fragment_new_task" />
    <fragment
        android:id="@+id/onBoardFragment"
        android:name="com.example.taskapp53.ui.onboard.OnBoardFragment"
        android:label="fragment_on_board"
        tools:layout="@layout/fragment_on_board" />

</navigation>