<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboard.OnBoardPageFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@drawable/img1"
        android:layout_margin="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:text="@string/to_do_list"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/img_board" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:textColor="@color/black"
        android:text="@string/desc_second"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingEnd="7dp"
        android:paddingStart="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="36dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_skip"
        android:paddingVertical="14dp"
        app:cornerRadius="32dp"
        android:layout_marginEnd="36dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:text="Start"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="14dp"
        app:cornerRadius="32dp"
        android:visibility="gone"
        android:layout_marginBottom="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>